logo and styles

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "debug": "^4.1.1",
     "minimatch": "^3.0.4",
+    "node-plantuml": "^0.8.1",
     "pino": "^5.11.1",
     "pino-debug": "^1.2.0",
     "pino-pretty": "^2.5.0",
