--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "tsc --project .",
     "lint": "tslint --project .",
-    "build-schema": "typescript-json-schema src/config.ts ConfigSchema --required true --id 'https://cdn.jsdelivr.net/gh/dyatko/arkit@master/schema.json#' -o schema.json",
+    "build-schema": "typescript-json-schema src/config.ts ConfigSchema --required true --id 'https://raw.githubusercontent.com/dyatko/arkit/master/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
     "test": "jest"
   },
