--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "eslint --ext .ts .",
     "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://raw.githubusercontent.com/dyatko/arkit/master/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
+    "jest": "jest",
     "test": "npm run lint && npm run jest",
-    "prepublish": "npm run test && npm run build"
+    "prepare": "npm run test && npm run build"
   },
   "engines": {
     "node": ">= 6.16.0"
