--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
       "@typescript-eslint"
     ],
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "promise/param-names": "off"
     },
     "env": {
       "node": true,
