--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arkit",
-  "version": "1.1.1",
-  "description": "A CLI tool to visualise a JavaScript, TypeScript or Flow codebase architecture",
+  "version": "1.1.2",
+  "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "index.js",
   "scripts": {
     "compile": "tsc --project .",
