--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     },
     "testPathIgnorePatterns": [
       "test/react-dom"
-    ]
+    ],
+    "verbose": true
   },
   "eslintIgnore": [
     "node_modules/*",
