speed up parsing

--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testPathIgnorePatterns": [
-      "test/react-dom"
+      "/test\/react-dom/",
+      "/node_modules/"
     ],
     "verbose": true
   },
