--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+dist: xenial
 language: node_js
 node_js:
-  - "6.16.0"
+  - 8
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
