--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "types": "./dist/arkit.d.ts",
   "scripts": {
     "compile": "tsc --project .",
-    "lint": "eslint --ext .ts .",
     "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://raw.githubusercontent.com/dyatko/arkit/master/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
+    "lint": "eslint --ext .ts .",
     "jest": "jest",
     "test": "npm run lint && npm run jest",
-    "prepare": "npm run build && npm run test"
+    "prepack": "npm run build && npm run test"
   },
   "engines": {
     "node": ">= 8.15.0"
