--- a/package.json
+++ b/package.json
@@ -57,28 +57,34 @@
     "pino-pretty": "^2.5.0",
     "recursive-readdir-synchronous": "0.0.4",
     "resolve": "^1.10.0",
-    "ts-morph": "^1.2.0",
+    "ts-morph": "^1.3.0",
     "tsconfig-paths": "^3.8.0",
     "yargs": "^13.2.1"
   },
   "jest": {
+    "preset": "ts-jest",
+    "roots": [
+      "<rootDir>/src",
+      "<rootDir>/test"
+    ],
+    "testRegex": ".*\\.test\\.tsx?$",
+    "testEnvironment": "node",
     "moduleFileExtensions": [
-      "ts",
       "json",
       "js",
+      "ts",
       "node"
     ],
-    "testEnvironment": "node",
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/*.ts"
     ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
     "testPathIgnorePatterns": [
-      "/test\/react-dom/",
-      "/node_modules/"
+      "<rootDir>/test/angular2_es2015/",
+      "<rootDir>/test/react-dom/",
+      "<rootDir>/test/express/",
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/"
     ],
     "verbose": true
   },
