--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
   "scripts": {
-    "architecture": "arkit -o dist/arkit.png -f dist/arkit.js dist/",
+    "architecture": "./index.js -o dist/arkit.png -f dist/arkit.js dist/",
     "compile": "tsc --project .",
     "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://raw.githubusercontent.com/dyatko/arkit/master/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
