--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "architecture": "./index.js -o dist/arkit.png src/",
     "compile": "tsc --project .",
-    "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://raw.githubusercontent.com/dyatko/arkit/master/schema.json' -o schema.json",
+    "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://arkit.js.org/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
     "lint": "eslint --ext .ts .",
     "jest": "jest --coverage",
