--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkit",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
@@ -56,6 +56,7 @@
     "nanomatch": "^1.2.13",
     "pino": "^5.11.1",
     "pino-pretty": "^2.5.0",
+    "plantuml-encoder-decoder": "dyatko/plantuml-encoder#master",
     "recursive-readdir-synchronous": "0.0.4",
     "resolve": "^1.10.0",
     "ts-morph": "^1.3.0",
