--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "ts-jest": "24.0.0",
     "tslint": "5.13.1",
     "tslint-config-standard": "8.0.1",
-    "typescript-json-schema": "0.36.0",
-    "weak": "1.0.1"
+    "typescript-json-schema": "0.36.0"
   },
   "dependencies": {
     "debug": "^4.1.1",
