--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkit",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
@@ -29,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/dyatko/arkit/issues"
   },
-  "homepage": "https://www.npmjs.com/arkit",
+  "homepage": "https://arkit.js.org",
   "devDependencies": {
     "@types/jest": "24.0.9",
     "@types/node": "11.10.4",
