--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "arkit",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
   "scripts": {
-    "architecture": "./index.js -o dist/arkit.png -f src/arkit.ts",
+    "architecture": "./index.js -o dist/arkit.png",
     "compile": "tsc --project .",
     "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://arkit.js.org/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
