--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "arkit",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
   "scripts": {
-    "architecture": "./index.js -o dist/arkit.png",
+    "architecture": "./index.js",
     "compile": "tsc --project .",
     "build-schema": "typescript-json-schema src/schema.ts ConfigSchema --required true --id 'https://arkit.js.org/schema.json' -o schema.json",
     "build": "npm run compile && npm run build-schema",
@@ -13,6 +13,12 @@
     "jest": "jest --coverage",
     "test": "npm run lint && npm run jest",
     "prepack": "npm run build && npm run test"
+  },
+  "arkit": {
+    "$schema": "https://arkit.js.org/schema.json",
+    "output": {
+      "path": "dist/arkit.png"
+    }
   },
   "engines": {
     "node": ">= 8.15.0"
