--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "$schema": "https://arkit.js.org/schema.json",
     "output": [
       {
-        "path": "dist/arkit.svg"
-      },
-      {
-        "path": "dist/arkit.png"
+        "path": [
+          "dist/arkit.svg",
+          "dist/arkit.png"
+        ]
       }
     ]
   },
@@ -45,6 +45,7 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.11.1",
     "@types/pino": "5.8.5",
+    "@types/progress": "^2.0.3",
     "@types/resolve": "0.0.8",
     "@types/yargs": "12.0.9",
     "@typescript-eslint/eslint-plugin": "1.4.2",
@@ -65,6 +66,7 @@
     "nanomatch": "^1.2.13",
     "pino": "^5.11.1",
     "pino-pretty": "^2.5.0",
+    "progress": "^2.0.3",
     "resolve": "^1.10.0",
     "ts-morph": "^1.3.0",
     "tsconfig-paths": "^3.8.0",
