Move renovate to package.json

--- a/package.json
+++ b/package.json
@@ -121,6 +121,11 @@
       "browser": false
     }
   },
+  "renovate": {
+    "extends": [
+      "config:base", ":automergeAll"
+    ]
+  },
   "keywords": [
     "architecture",
     "cli",
