--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkit",
-  "version": "1.3.14",
+  "version": "1.3.15",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
@@ -123,7 +123,8 @@
   },
   "renovate": {
     "extends": [
-      "config:base", ":automergeAll"
+      "config:base",
+      ":automergeAll"
     ]
   },
   "keywords": [
