--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2015",
+    "lib": ["es2015"],
     "types": ["node", "jest"],
     "strictNullChecks": true,
     "outDir": "dist/",
