--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkit",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Visualises JavaScript, TypeScript and Flow codebases as meaningful and committable architecture diagrams",
   "main": "./dist/arkit.js",
   "types": "./dist/arkit.d.ts",
@@ -60,7 +60,8 @@
     "prettier": "1.16.4",
     "ts-jest": "24.0.0",
     "tslint": "5.14.0",
-    "typescript-json-schema": "0.36.0"
+    "typescript-json-schema": "0.36.0",
+    "worldstar": "^1.0.0"
   },
   "dependencies": {
     "nanomatch": "^1.2.13",
