--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prettier": "1.18.2",
     "ts-jest": "24.0.2",
     "tslint": "5.19.0",
+    "typescript": "3.6.2",
     "typescript-json-schema": "0.40.0",
     "worldstar": "1.2.3"
   },
