Feature/local plantuml conversion (#1774)
* Replace web service with local PlantUML conversion

Replaces the external arkit.pro web service with local PlantUML conversion
using the node-plantuml library. This change provides several benefits:

Benefits:
- No external web service calls - all conversion happens locally
- Enhanced privacy - code never leaves the local machine
- Works offline without internet connection
- No company policy concerns about external services

Changes:
- Add node-plantuml as production dependency
- Update converter.ts to use node-plantuml for SVG/PNG generation
- Add comprehensive error handling with Java installation guidance
- Update logger.ts to use new pino transport API
- Deprecate request() function in utils.ts (kept for compatibility)
- Add TypeScript type definitions for node-plantuml

Requirements:
- Java Runtime Environment (JRE) 8+ must be installed
- Helpful error messages guide users through Java installation

Documentation:
- Updated README.md with local conversion details and Java requirements
- Updated CLAUDE.md to reflect architectural changes
- Added installation instructions for Java on all platforms

Testing:
- Verified SVG and PNG generation with local conversion
- Tested error handling when Java is not available
- Confirmed PlantUML text output still works

* Refactor: Improve code structure and remove unused files

This commit refactors the codebase by improving the structure of several modules and removing unused generated files like `arkit.png` and `arkit.svg`.

Co-authored-by: i <i@marat.online>

* Refactor: Replace arkit.pro with local PlantUML conversion

Co-authored-by: i <i@marat.online>

* Restore test output files that were accidentally deleted

These are important example diagrams that demonstrate Arkit's functionality.
They should be regenerated with the new local PlantUML conversion, but
for now restoring them from master to fix the accidental deletion.

* Fix ts-morph v26 API compatibility issues

Fixed a

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     
     strategy:
+      fail-fast: false
       matrix:
         node-version: [18.x, 20.x, 22.x]
     
@@ -49,7 +50,6 @@ jobs:
       
       - name: Run tests with coverage
         run: npm run jest
-        continue-on-error: true
       
       - name: Upload coverage to Codecov
         if: matrix.node-version == '22.x'
